--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,5 +17,5 @@ jobs:
           uses: Azure/pipelines@v1
           with:
             azure-devops-project-url: https://dev.azure.com/muzians010739/AgileProject
-            azure-pipeline-name: 'DevOps581329.gitapp'
+            azure-pipeline-name: 'webapp.git'
             azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
